monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4023/A4023c.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4023;

grammar A4023c extends de.monticore.grammar.cocos.invalid.A4023b{

 A = "a";

}
